# SysOpy

./: CMakeLists.txt
BartczakMaciej/cw01/zad1/: Makefile  wclib.c  wclib.h
BartczakMaciej/cw01/zad2/: Makefile  wc_repl.c  wc_repl_dynamic.c
BartczakMaciej/cw01/zad3a/: Makefile  input.txt  report.txt  results_dynamic.txt  results_shared.txt  results_static.txt
BartczakMaciej/cw01/zad3b/: Makefile  report.txt  results_dynamic_0.txt  results_dynamic_1.txt  results_dynamic_2.txt  results_shared_0.txt  results_shared_1.txt  results_shared_2.txt  results_static_0.txt  results_static_1.txt  results_static_2.txt  test.sh
BartczakMaciej/cw02/zad1/: Makefile  pomiar_zad_1.txt  replace.c  replace.h
BartczakMaciej/cw02/zad2/: Makefile  komentarz_zad_2.txt  pomiar_zad_2.txt  reverse.c
BartczakMaciej/cw02/zad3/: Makefile  dudir.c  komentarz_zad_3.txt
BartczakMaciej/cw02/zad4/: Makefile  dudir_r.c  komentarz_zad_4.txt
BartczakMaciej/cw03/zad1/: Makefile  fork.c
BartczakMaciej/cw03/zad2/: Makefile  ls.c
BartczakMaciej/cw03/zad3/: Makefile  tree.c
BartczakMaciej/cw04/zad1/: Makefile  handler.txt  ignore.txt  mask.txt  pending.txt  raport2.txt  signal.c
BartczakMaciej/cw04/zad2/: Makefile  sigaction.c
BartczakMaciej/cw04/zad3/: Makefile  comms.c
BartczakMaciej/cw05/zad1/: mail.c
BartczakMaciej/cw05/zad2/: Makefile  integral.c  raport2.txt
BartczakMaciej/cw05/zad3/: Makefile  child.c  parent.c  raport3.txt
BartczakMaciej/cw06/zad1/: Makefile  client.c  common.h  server.c
BartczakMaciej/cw06/zad2/: client.c  common.h  server.c
BartczakMaciej/cw07/zad1/: Makefile  hair.c
BartczakMaciej/cw07/zad2/: hair.c
BartczakMaciej/cw08/zad1/: grid.c  grid.h  life.c
BartczakMaciej/cw09/zad1/: Makefile  northpole.c
BartczakMaciej/cw10/zad1/: client.c  message.h  server.c
BartczakMaciej/cw10/zad2/: client.c  (+2 more)
BartczakMaciej/wtf/: Makefile  client.c  server.c
(+8 files in other folders)
