cmake_minimum_required(VERSION 3.24)
project(sysopy C)

set(CMAKE_C_STANDARD 17)

add_executable(cw01_zad1 BartczakMaciej/cw01/zad1/wclib.c)
add_executable(cw01_zad2 BartczakMaciej/cw01/zad2/wc_repl.c BartczakMaciej/cw01/zad2/wc_repl_dynamic.c)
add_executable(cw02_zad1 BartczakMaciej/cw02/zad1/replace.c)
add_executable(cw02_zad2 BartczakMaciej/cw02/zad2/reverse.c)
add_executable(cw02_zad3 BartczakMaciej/cw02/zad3/dudir.c)
add_executable(cw02_zad4 BartczakMaciej/cw02/zad4/dudir_r.c)
add_executable(cw03_zad1 BartczakMaciej/cw03/zad1/fork.c)
add_executable(cw03_zad2 BartczakMaciej/cw03/zad2/ls.c)
add_executable(cw03_zad3 BartczakMaciej/cw03/zad3/tree.c)
add_executable(cw04_zad1 BartczakMaciej/cw04/zad1/signal.c)
add_executable(cw04_zad2 BartczakMaciej/cw04/zad2/sigaction.c)
add_executable(cw04_zad3 BartczakMaciej/cw04/zad3/comms.c)
add_executable(cw05_zad1 BartczakMaciej/cw05/zad1/mail.c)
add_executable(cw05_zad2 BartczakMaciej/cw05/zad2/integral.c)
add_executable(cw05_zad3p BartczakMaciej/cw05/zad3/parent.c)
add_executable(cw05_zad3c BartczakMaciej/cw05/zad3/child.c)
add_executable(cw06_zad1s BartczakMaciej/cw06/zad1/server.c)
add_executable(cw06_zad1c BartczakMaciej/cw06/zad1/client.c)
add_executable(cw06_zad2s BartczakMaciej/cw06/zad2/server.c)
add_executable(cw06_zad2c BartczakMaciej/cw06/zad2/client.c)
add_executable(cw07_zad1 BartczakMaciej/cw07/zad1/hair.c)
add_executable(cw07_zad2 BartczakMaciej/cw07/zad2/hair.c)
add_executable(cw08_zad1 BartczakMaciej/cw08/zad1/life.c BartczakMaciej/cw08/zad1/grid.c)
add_executable(cw09_zad1 BartczakMaciej/cw09/zad1/northpole.c)

find_library(NCURSESW_LIBRARY NAMES ncursesw)

if (NOT NCURSESW_LIBRARY)
    message(FATAL_ERROR "ncursesw library not found")
endif ()

target_link_libraries(cw08_zad1 ${NCURSESW_LIBRARY})
